2002-08-22  Loren J. Rittle <ljrittle@acm.org>

	* testsuite/abi_check.cc: Enhance shell portability.
	* config/abi/i386-unknown-freebsd4.6: Add.
	* config/abi/i386-unknown-freebsd4.6/baseline_symbols.txt: New file.

2002-08-22  Paolo Carlini  <pcarlini@unitus.it>

	* docs/html/faq/index.html: Add Loren James Rittle and
	Paolo Carlini to the list of v3 maintainers.
	* docs/html/faq/index.txt: Ditto.
	* docs/html/17_intro/RELEASE-NOTES: Ditto.

2002-08-22  Benjamin Kosnik  <bkoz@redhat.com>
	    Phil Edwards  <pme@gcc.gnu.org>
	    Ulrich Drepper  <drepper@redhat.com>
	
	* Makefile.am (check-abi): New rule.
	* Makefile.in: Regenerate.
	* acinclude.m4 (GLIBCPP_CONFIGURE_TESTSUITE): Export baseline_file.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* testsuite/Makefile.am (noinst_PROGRAMS): Add abi_check.
	(abi_check_SOURCES): Add.
	* testsuite/Makefile.in: Regenerate.	
	* testsuite/abi_check.cc: New file.
	* config/abi: Add.
	* config/abi/i686-pc-linux-gnu: Add.
	* config/abi/i686-pc-linux-gnu/baseline_symbols.txt: New file.
	
2002-08-19  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.in (libtool_VERSION): Update to 5:1:0.
	* configure: Regenerate.
	
2002-08-19  Jonathan Wakely  <jw@kayari.org>

	* docs/html/configopts.html, docs/html/documentation.html,
	docs/html/install.html, docs/html/22_locale/codecvt.html,
	docs/html/22_locale/ctype.html, docs/html/22_locale/howto.html,
	docs/html/22_locale/locale.html,
	docs/html/22_locale/messages.html: Conform to HTML 4.01 standard.

2002-08-15  Benjamin Kosnik  <bkoz@redhat.com>

	* include/ext/stdio_filebuf.h (stdio_filebuf): Explicitly set
	_M_buf_size_opt to zero when unbuffering.
	* include/bits/fstream.tcc (filebuf::showmanyc): Simplify.
	Consistency checks for _M_buf_size_opt.

	Revert PR libstdc++/7445
	* src/locale.cc (locale::classic): Revert.
	
	* docs/html/17_intro/TODO: Add.
	
2002-08-15  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/documentation.html:  Update doxygen links for 3.2.
