@@ -1,6 +1,7 @@
 2002-08-22  Loren J. Rittle <ljrittle@acm.org>
 
 	* testsuite/abi_check.cc: Enhance shell portability.
+	Support older binutils/readelf.
 	* config/abi/i386-unknown-freebsd4.6: Add.
 	* config/abi/i386-unknown-freebsd4.6/baseline_symbols.txt: New file.
 
